HFP-785 Corrected styles and spacing.

--- a/css/flashcards.css
+++ b/css/flashcards.css
@@ -540,7 +540,7 @@ button::-moz-focus-inner {
   position: absolute;
   left: 0;
   right: 0;
-  top: 9em;
+  top: 8.2em;
   bottom: 0;
 }
 
@@ -552,10 +552,15 @@ button::-moz-focus-inner {
 }
 
 .h5p-flashcards .h5p-results-score {
-  float: right;
+  position: absolute;
   font-size: 1.4em;
   line-height: 3em;
   color: white;
+  right: 1.5em;
+}
+
+.h5p-flashcards .h5p-results-score span{
+  color: #adb6c7;
 }
 
 .h5p-flashcards .h5p-results-list {
@@ -565,13 +570,14 @@ button::-moz-focus-inner {
   overflow-y: scroll;
   max-height: 24.6em;
   padding-right: 1em;
-  margin: 0;
+  margin: 6em 0 0 0;
 }
 
 .h5p-flashcards .h5p-results-list-item {
   position: relative;
+  overflow: hidden;
   color: white;
-  padding: 1em;
+  padding: 0.8em;
   border: 1px solid #414d66;
   border-radius: 1.5em;
 }
@@ -583,7 +589,7 @@ button::-moz-focus-inner {
   border-radius: 1em;
   position: relative;
   float: left;
-  margin-right: 1em;
+  margin-right: 2em;
   background-size: cover;
   background-position: center center;
 }
@@ -600,6 +606,7 @@ button::-moz-focus-inner {
   color: #7cf0c1;
   line-height: 2em;
   margin-right: 3.5em;
+  font-size: 0.8em;
 }
 
 .h5p-flashcards .h5p-results-answer span {
@@ -615,7 +622,7 @@ button::-moz-focus-inner {
   right: 0.5em;
   top: 0.5em;
   bottom: 0.5em;
-  width: 4em;
+  width: 3.5em;
   border-radius: 0 1em 1em 0;
   background-color: #2db6ac;
   text-align: center;
@@ -626,7 +633,7 @@ button::-moz-focus-inner {
   content: "\e601";
   font-size: 3em;
   vertical-align: middle;
-  line-height: 1.5em;
+  line-height: 1.3em;
 }
 
 .h5p-flashcards .h5p-results-list-item.h5p-incorrect .h5p-results-answer {
@@ -641,7 +648,7 @@ button::-moz-focus-inner {
   content: "\e600";
   font-size: 3em;
   vertical-align: middle;
-  line-height: 1.5em;  
+  line-height: 1.3em;
 }
 
 .h5p-flashcards .h5p-visual-progress {
@@ -726,14 +733,14 @@ button::-moz-focus-inner {
 
 .h5p-show-results span:first-child:before {
   font-family: "h5pFontIcons";
-  content: "\e605";
-  font-size: 9em;
+  content: "\e91b";
+  font-size: 12em;
   color: #6a7589;
   display: block;
   position: absolute;
   left: 0;
   right: 0;
-  top: -0.2em;
+  top: -0.1em;
 }
 
 .h5p-show-results span:last-child {
@@ -741,7 +748,7 @@ button::-moz-focus-inner {
   color: #7cf0bd;
   left: 0;
   right: 0;
-  top: 3.5em;
+  top: 3em;
   font-size: 0.9em;
 }
 
